ie9 alignment fixes

--- a/less/insight.less
+++ b/less/insight.less
@@ -413,9 +413,14 @@
 		> div {
 			display: table-cell;
 			width: 1px;
+			vertical-align: middle;
 
 			&.flex-fill {
 				width: auto;
+			}
+
+			.circle {
+				top: -3px;
 			}
 
 		}
